--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
 	"name": "v2jsx",
 	"version": "1.0.4",
 	"main": "index.js",
-	"repository": "git@github.com:Fi2zz/vtemplate2jsx.git",
-	"author": "Fitz <fitz.wen@edragonconnect.com>",
+	"repository": "git@github.com:Fi2zz/v2jsx.git",
 	"license": "MIT",
 	"dependencies": {
-		"dirty-json": "^0.9.2",
 		"prettier": "^2.5.1"
 	}
 }
